Fix alignment of onboarding tooltip to align with the automatically-added tab.
Tooltip now updates left positioning to the vertical/horizontal
positioning of automatically-added tab chip. Also tweaked color of dark
mode tooltip to spec.

Demos: https://screencast.googleplex.com/cast/NTkzNTYzNTIzMDYyMTY5NnwwYzkxNjE3YS00Mg
https: //screencast.googleplex.com/cast/NjI1MjU0NzUxMjcyOTYwMHxhOTNhMGNjYy05OA
Bug: b:470105047
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7353616
Commit-Queue: Diana OuYang <dianaou@google.com>
Cr-Commit-Position: refs/heads/main@{#1563575}

--- a/chrome/browser/resources/contextual_tasks/onboarding_tooltip.css
+++ b/chrome/browser/resources/contextual_tasks/onboarding_tooltip.css
@@ -12,8 +12,7 @@ cr-tooltip {
   --paper-tooltip-delay-in: 300ms;
   --paper-tooltip-delay-out: 0ms;
   --paper-tooltip-opacity: 1.0;
-  margin-top: -120px;
-  margin-inline-start: var(--composebox-start-indent, 24px);
+  margin-top: -20px;
 }
 
 cr-tooltip::part(tooltip) {
@@ -23,6 +22,8 @@ cr-tooltip::part(tooltip) {
     drop-shadow(0 2px 6px rgba(0, 0, 0, 0.15));
   padding: 16px;
   max-width: 300px;
+  width: var(--onboarding-tooltip-width, auto);
+  box-sizing: border-box;
   font-size: 12px;
   line-height: 16px;
   position: relative;
@@ -33,7 +34,7 @@ cr-tooltip::part(tooltip)::after {
   content: "";
   position: absolute;
   top: 100%;
-  inset-inline-start: 35px;
+  inset-inline-start: 12.5px; /* Aligns the caret to the chip thumbnail*/
   border-width: 8px;
   border-style: solid;
   border-color: var(--paper-tooltip-background) transparent transparent
